Update BBC Homework Revision.html

--- a/BBC Homework Revision.html
+++ b/BBC Homework Revision.html
@@ -19,8 +19,7 @@
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
             </ul>
-            <label for="site search">search:</label>
-            <input type="search">
+            <input type="text" label for="search">
             </nav>        
         </header>
 
